--- a/src/main/webapp/WEB-INF/templates/login.html
+++ b/src/main/webapp/WEB-INF/templates/login.html
@@ -35,7 +35,7 @@
                     <div class="col">
                         <input type="text" name="code" class="form-control" id="code"
                                style="width: 80%; display: inline-block">
-                        <img src="/codeImage"
+                        <img src="codeImage"
                              id="codeImage"
                              style="height:33px;cursor:pointer;"
                              onclick="flush()">
@@ -55,7 +55,7 @@
 <script>
     function flush() {
         $.ajax({
-            url: "/codeImage?" + new Date().getTime(),
+            url: "codeImage?" + new Date().getTime(),
             type: "get",
             xhrFields: {
                 responseType: 'blob' // 设置响应类型为blob
