--- a/src/main/webapp/WEB-INF/templates/detail.html
+++ b/src/main/webapp/WEB-INF/templates/detail.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 <div th:insert="components/navbar::navbar"></div>
-<div class="container content">
+<div class="container content" style="min-height: 100vh;">
     <div class="card">
         <div class="card-body">
             <div class="title" th:text="${article.title}"></div>
