--- a/src/main/webapp/WEB-INF/templates/edit.html
+++ b/src/main/webapp/WEB-INF/templates/edit.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <div th:insert="components/navbar::navbar"></div>
-<div class="container content">
+<div class="container content" style="min-height: 100vh">
     <form>
         <input type="hidden" th:value="${data.id}" id="id">
         <div class="title">
